
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-contextos"
version = "1.0.0"
description = "Prometheus: Universal AI Context Operating System & Skill Ecosystem — Solve AI Context Debt once and for all."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "lanekingkong", email = "lanekingkong@github.com"},
]
keywords = [
    "ai", "agent", "context-engineering", "skill-system", "knowledge-graph",
    "rag", "memory-layer", "multi-agent", "token-compression", "contextos",
    "llm", "orchestration", "context-governance"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "chromadb>=0.4",
    "sqlalchemy>=2.0",
    "aiofiles>=23.0",
    "watchfiles>=0.21",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.3",
    "mypy>=1.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["prometheus-contextos[openai,anthropic,dev]"]

[project.scripts]
prometheus = "prometheus.cli:main"
ptm = "prometheus.cli:main"

[project.urls]
Homepage = "https://github.com/lanekingkong/prometheus"
Documentation = "https://github.com/lanekingkong/prometheus#readme"
Repository = "https://github.com/lanekingkong/prometheus.git"
Issues = "https://github.com/lanekingkong/prometheus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["prometheus*"]

[tool.ruff]
line-length = 100
